--- a/style.css
+++ b/style.css
@@ -13,11 +13,21 @@ body {
     background-color: #363636;
     margin: 0;
     padding: 1rem;
+    position: sticky;
 }
 
 .Navigation a {
     text-decoration: none;
     color: white;
+    font-weight: 500;
+    padding-inline: 1rem;
+}
+
+.Navigation a:hover {
+    background-color: white;
+    color: black;
+    border-radius: 100px;
+    transition: all 0.3s ease-in-out;
 }
 
 .Hero {
