--- a/style.css
+++ b/style.css
@@ -75,13 +75,33 @@ body {
     box-shadow: 4px 4px 8px 0 rgba(0, 0, 0, 0.2);
     border-radius: 8px;
     padding: 20px;
-    background-color: rgb(184, 184, 184);
+    background-color: rgb(163, 163, 163);
+}
+
+.info h2 {
+    color: white;
+    background-color: rgb(66, 66, 66);
+    text-align: center;
+    padding: 0.5rem;
+    border-radius: 90px;
+}
+
+.info img {
+    width: 100%;
+    max-height: 500px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.info p {
+    text-align: justify;
 }
 
 .articles-div {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    margin-left: 1rem;
 }
 
 .content {
@@ -132,11 +152,52 @@ footer {
 .github {
     color: white;
     background-color: black;
-    padding: 3px;
+    padding: 4px;
 }
 
 .linkedin {
     color: white;
     background-color: #0077B5;
     padding: 4px;
+}
+
+@media screen and (max-width: 1200px) {
+    .content {
+        flex-direction: column;
+    }
+
+    main aside {
+        align-self: center;
+    }
+
+    .articles-div {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        margin-inline: 1rem;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .hero-text h1 {
+        font-size: 3.5rem;
+        margin: 0;
+    }
+
+    .hero-text h2 {
+        font-size: 2rem;
+        margin-bottom: 0;
+        color: #F9CB99;
+    }
+
+    .hero-text p {
+        font-size: 1.2rem;
+        margin: 0;
+        color: #F9CB99;
+        text-align: center;
+    }
+
+    main aside {
+        align-self: center;
+    }
 }
