--- a/style.css
+++ b/style.css
@@ -151,14 +151,20 @@ footer {
 
 .github {
     color: white;
-    background-color: black;
     padding: 4px;
 }
 
 .linkedin {
     color: white;
-    background-color: #0077B5;
     padding: 4px;
+}
+
+.github:hover {
+    color: rgb(0, 0, 0);
+}
+
+.linkedin:hover {
+    color: #0072B1;
 }
 
 @media screen and (max-width: 1200px) {
