--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ body {
     text-align: justify;
 }
 
-.articles-div {
+div article {
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -118,8 +118,17 @@ body {
     width: 30%;
 }
 
+.side-content li {
+    list-style: none;
+}
+
+.side-content li ul {
+    padding: 0;
+}
+
 .profile-img {
     border: 4px solid rgb(114, 114, 114);
+    width: 80%;
 }
 
 aside p {
@@ -176,7 +185,7 @@ footer {
         align-self: center;
     }
 
-    .articles-div {
+    .div article {
         display: flex;
         flex-direction: column;
         gap: 2rem;
